Simplify buildProfileUrl to use the Charset URLEncoder overload
Code review found the UnsupportedEncodingException catch/rethrow
was unnecessary - URLEncoder.encode(String, Charset) has existed
since Java 10 and doesn't throw a checked exception, so there's
nothing to catch. Also fixes import ordering (java.io before
java.net/java.nio) that the extra import had broken.